fix: change project name and generate swagger
